--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,11 @@
       @apply inline-flex text-white bg-gray-500 border-0 py-1 px-3 focus:outline-none hover:bg-gray-600 rounded text-lg
     }
 
+    .btn-primary-indigo-slim {
+      @apply text-white bg-indigo-700 hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 
+      font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800
+    }
+
     .btn-primary-gray-big {
       @apply text-white bg-gray-700  hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-base px-6 py-3.5 text-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800
     }
