--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,9 @@
       @apply text-white bg-indigo-700  hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-base px-6 py-3.5 text-center dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800
     }
 
-
+    .min-h-30 {
+      min-height:30rem;
+    }
 
     .red-btn {
      background-color:#FF0000;
